<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_text1"
        android:gravity="left|center_vertical"
        android:layout_margin="16dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/textview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_text2"
        android:gravity="center"
        android:layout_margin="16dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/textview3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_text3"
        android:gravity="right|center_vertical"
        android:layout_margin="16dp"
        android:layout_weight="1"/>

</LinearLayout>