<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:checkableBehavior="all"
        android:orderInCategory="100">
        <item
            android:id="@+id/main_menu_item1"
            android:icon="@drawable/ic_call_missed_outgoing_black_24dp"
            android:orderInCategory="100"
            android:title="@string/menu_item1"
            app:showAsAction="never" />
    </group>

    <group
        android:checkableBehavior="single"
        android:orderInCategory="200">
        <item
            android:id="@+id/main_menu_item2"
            android:icon="@drawable/ic_merge_type_black_24dp"
            android:orderInCategory="200"
            android:title="@string/menu_item2"
            app:showAsAction="always|withText" />

        <item
            android:id="@+id/main_menu_item3"
            android:icon="@drawable/ic_motorcycle_black_24dp"
            android:orderInCategory="300"
            android:title="@string/menu_item3"
            app:showAsAction="ifRoom" />
    </group>

    <item
        android:id="@+id/main_menu_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="400"
        android:title="@string/find"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.SearchView"/>

</menu>